# SysProg

./: CMakeLists.txt
vorgabe/lib/: queue.h
vorgabe/src/: HRRN.c  LCFSPR.c  MLF.c  PRIONP.c  RR.c  SRTN.c  queue.c
